<resources>
    <string name="app_name">Assignment</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="some_id1">6760</string>
    <string name="some_id2">747</string>
    <string name="some_id3">590</string>
    <string name="title_activity_get_location">getLocation</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="logout">Logout</string>
</resources>