<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:textAlignment="textStart"
    tools:context=".SignUp">

  <TextView
      android:id="@+id/signupText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-black"
      android:text="@string/sign_up"
      android:textColor="#000000"
      android:textColorHint="#000000"
      android:textSize="36sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.246" />

  <EditText
      android:id="@+id/userName"
      android:layout_width="295dp"
      android:layout_height="42dp"
      android:background="@drawable/custom_input"
      android:contextClickable="false"
      android:drawableStart="@drawable/custom_person_icon"
      android:drawablePadding="12dp"
      android:ellipsize="none"
      android:ems="10"
      android:hint="@string/name"
      android:textColorHint="#000000"
      android:inputType="textPersonName"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signupText"
      app:layout_constraintVertical_bias="0.058" />

  <EditText
      android:id="@+id/userEmail"
      android:layout_width="295dp"
      android:layout_height="42dp"
      android:background="@drawable/custom_input"
      android:drawableStart="@drawable/custom_email_icon"
      android:drawablePadding="12dp"
      android:ems="10"
      android:hint="@string/email"
      android:textColorHint="#000000"
      android:inputType="textEmailAddress"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/userName"
      app:layout_constraintVertical_bias="0.066" />

  <EditText
      android:id="@+id/userPassword"
      android:layout_width="295dp"
      android:layout_height="42dp"
      android:background="@drawable/custom_input"
      android:drawableStart="@drawable/custom_lock_item"
      android:drawablePadding="12dp"
      android:ems="10"
      android:hint="@string/password"
      android:textColorHint="#000000"
      android:inputType="textPassword"
      android:paddingStart="12dp"
      android:paddingEnd="12dp"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.552" />

  <Button
      android:id="@+id/signUpButton"
      android:layout_width="295dp"
      android:layout_height="42dp"
      android:background="@drawable/custom_input_button"
      android:text="@string/sign_up"
      android:textColor="#FFFFFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/userPassword"
      app:layout_constraintVertical_bias="0.083" />

  <TextView
      android:id="@+id/logInButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:textColor="#2B2B2B"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/userName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.431"
      app:layout_constraintStart_toEndOf="@+id/signupText"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.824" />

  <ProgressBar
      android:id="@+id/progressBar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signUpButton"
      app:layout_constraintVertical_bias="0.286" />

</androidx.constraintlayout.widget.ConstraintLayout>